Refactor line chart

--- a/ui/src/app/core-ui/labels/components/configure-labels/configure-labels.component.html
+++ b/ui/src/app/core-ui/labels/components/configure-labels/configure-labels.component.html
@@ -40,7 +40,7 @@
                 <mat-icon class="icon">add</mat-icon><span>Add new Label</span>
             </button>
             <button mat-button mat-raised-button color="primary" (click)="endEditCategory()">
-                <span>Back</span>
+                <span>Done</span>
             </button>
         </div>
     </div>
