[STREAMPIPES-254] add correction value rule to preprocessing pipeline in connect adapters

--- a/ui/src/app/connect/dialog/edit-event-property/components/edit-event-property-primitive/edit-event-property-primitive.component.html
+++ b/ui/src/app/connect/dialog/edit-event-property/components/edit-event-property-primitive/edit-event-property-primitive.component.html
@@ -30,6 +30,7 @@
     </sp-edit-data-type>
 
     <sp-edit-unit-transformation
+            *ngIf="!isTimestampProperty"
             [cachedProperty]= "cachedProperty"
             [showUnitTransformation]="!hideUnitTransformation">
     </sp-edit-unit-transformation>
