--- a/ui/src/app/connect/dialog/edit-event-property/edit-event-property.component.html
+++ b/ui/src/app/connect/dialog/edit-event-property/edit-event-property.component.html
@@ -40,6 +40,12 @@
       </mat-form-field>
     </div>
 
+    <sp-edit-correction-value
+            *ngIf="isNumericProperty && !isTimestampProperty"
+            [cachedProperty]="cachedProperty"
+            (correctionValueChanged)="enableSaveBtn($event)">
+    </sp-edit-correction-value>
+
     <div class="form-group">
       <mat-form-field class="doubleWidth">
         <input matInput placeholder="Domain Property" class="dmainProperty" name="domainproperty" id="domainproperty"
@@ -57,7 +63,8 @@
   <sp-edit-event-property-primitive
           *ngIf="isEventPropertyPrimitive"
           [isTimestampProperty]="isTimestampProperty"
-          [cachedProperty]="cachedProperty">
+          [cachedProperty]="cachedProperty"
+          (isNumericDataType)="isNumericDataType($event)">
   </sp-edit-event-property-primitive>
   <sp-edit-event-property-list
           *ngIf="isEventPropertyList"
@@ -68,5 +75,5 @@
 
 <mat-dialog-actions>
   <button mat-button mat-raised-button class="mat-basic" mat-dialog-close>Close</button>
-  <button mat-button mat-raised-button color="primary" (click)="save()">Save</button>
+  <button mat-button mat-raised-button color="primary" [disabled]="isSaveBtnEnabled" (click)="save(); isSaveBtnEnabled = false">Save</button>
 </mat-dialog-actions>
