refactor node-controller and add initial work on local container management

--- a/ui/src/app/editor/dialog/save-pipeline/save-pipeline.component.html
+++ b/ui/src/app/editor/dialog/save-pipeline/save-pipeline.component.html
@@ -49,7 +49,7 @@
                 <mat-slide-toggle color="primary" [(ngModel)]="advancedSettings">
                     Choose deployment options
                 </mat-slide-toggle>
-                <mat-divider *ngIf="advancedSettings" style="margin: 2em 0 2em 0;"></mat-divider>
+<!--                <mat-divider *ngIf="advancedSettings" style="margin: 2em 0 2em 0;"></mat-divider>-->
 <!--                <div *ngIf="advancedSettings">-->
 <!--                    <div fxFlex="100" fxLayout="row">-->
 <!--                        <div fxFlex="50" fxLayout="row" fxLayoutAlign="center center">-->
