[WIP] add initial support for multi-connect worker container, adapted models with deployment target info

--- a/ui/src/app/connect/components/data-marketplace/adapter-description/adapter-description.component.html
+++ b/ui/src/app/connect/components/data-marketplace/adapter-description/adapter-description.component.html
@@ -32,6 +32,8 @@
             <img *ngIf="adapter.icon" [src]="adapter.icon" style="min-height: 50px;" class="iconImg"/>
         </div>
         <h3>{{adapter.name}}</h3>
+        <b *ngIf="isSpecificDescription()">{{adapter.deploymentTargetNodeHostname}}</b>
+        <b *ngIf="isGenericDescription()">{{adapter.protocolDescription.deploymentTargetNodeHostname}}</b>
     </div>
     <div fxLayout="row">
         <div fxFlex="70" class="description" fxLayoutAlign="start start">
