--- a/ui/src/app/editor/dialog/save-pipeline/save-pipeline.component.html
+++ b/ui/src/app/editor/dialog/save-pipeline/save-pipeline.component.html
@@ -47,17 +47,18 @@
                     Start pipeline immediately
                 </mat-slide-toggle>
                 <mat-slide-toggle color="primary" [(ngModel)]="advancedSettings">
-                    Choose deployment options
+                    Configure deployment options
                 </mat-slide-toggle>
-                <mat-divider *ngIf="advancedSettings" style="margin: 2em 0 2em 0;"></mat-divider>
+                <mat-divider *ngIf="advancedSettings" style="margin: 1em 0 1em 0;"></mat-divider>
                 <div *ngIf="advancedSettings">
-
-                    <b>Relay options</b>
-
                     <div>
+                        <b>Pipeline Operation Policies</b>
+                    </div>
+
+                    <div style="margin-top: 2em">
                         <div fxFlex="100" fxLayout="row">
-                            <div fxFlex="75" fxLayout="row" fxLayoutAlign="left center">
-                                <span>Offline broker-to-broker event relay strategy</span>
+                            <div fxFlex="50" fxLayout="row" fxLayoutAlign="left top">
+                                <span>Relay Policy</span>
                             </div>
                         </div>
                         <div fxFlex="50" fxLayout="row" fxLayoutAlign="start center">
@@ -70,43 +71,135 @@
                         </div>
                     </div>
 
-                </div>
-                <mat-divider *ngIf="advancedSettings" style="margin: 2em 0 2em 0;"></mat-divider>
-                <div *ngIf="advancedSettings">
-                    <b>Node selection</b>
-                    <div *ngFor="let processors of pipeline.sepas">
+                    <div style="margin-top: 1em">
                         <div fxFlex="100" fxLayout="row">
-                            <div fxFlex="50" fxLayout="row" fxLayoutAlign="left center">
-                                <span>{{processors.name}}</span>
+                            <div fxFlex="50" fxLayout="row" fxLayoutAlign="left top">
+                                <span>Execution Policy</span>
                             </div>
                         </div>
                         <div fxFlex="50" fxLayout="row" fxLayoutAlign="start center">
-                            <mat-form-field appearance="outline">
-                            <mat-select [(ngModel)]="processors.deploymentTargetNodeId" style="margin: 0;height: 20px;">
-                                <mat-option [value]="node.nodeControllerId" *ngFor="let node of deploymentOptions[processors.appId]">
-                                    <em>{{node.nodeMetadata.nodeAddress}}</em>
-                                </mat-option>
-                            </mat-select>
-                            </mat-form-field>
+                            <mat-radio-group
+                                    aria-labelledby="execution-policy-radio-group-label"
+                                    class="execution-policy-radio-group"
+                                    [(ngModel)]="selectedPipelineExecutionPolicy"
+                                    (change)="onExecutionPolicyChange($event.value)">
+                                <mat-radio-button class="execution-policy-radio-button"
+                                                  *ngFor="let policy of pipelineExecutionPolicies"
+                                                  [value]="policy">{{policy}}
+                                </mat-radio-button>
+                            </mat-radio-group>
                         </div>
                     </div>
-                    <div *ngFor="let sinks of pipeline.actions">
-                        <div fxFlex="100" fxLayout="row">
-                            <div fxFlex="50" fxLayout="row" fxLayoutAlign="left center">
-                                <span>{{sinks.name}}</span>
-                            </div>
+
+                    <div style="margin: 1em 0 1em 0;">
+                        <div>
+                            <b>Node Execution Targets</b>
                         </div>
-                        <div fxFlex="50" fxLayout="row" fxLayoutAlign="start center">
-                            <mat-form-field appearance="outline">
-                                <mat-select [(ngModel)]="sinks.deploymentTargetNodeId" style="margin: 0; height: 20px;">
-                                    <mat-option [value]="node.nodeControllerId" *ngFor="let node of deploymentOptions[sinks.appId]">
-                                        <em>{{node.nodeMetadata.nodeAddress}}</em>
-                                    </mat-option>
-                                </mat-select>
-                            </mat-form-field>
+                        <div style="margin-top: 2em">
+                            <mat-accordion class="example-headers-align">
+
+                                <mat-expansion-panel (opened)="panelOpenState = true"
+                                                     (closed)="panelOpenState = false"
+                                                     [expanded]="panelOpenState">
+                                    <mat-expansion-panel-header>
+                                        <mat-panel-description>
+                                            Modify deployment targets: <b>{{selectedPipelineExecutionPolicy}}</b>
+                                            <mat-icon>storage</mat-icon>
+                                        </mat-panel-description>
+                                    </mat-expansion-panel-header>
+
+                                    <div *ngFor="let processors of tmpPipeline.sepas">
+                                        <div fxFlex="100" fxLayout="row">
+                                            <div fxFlex="50" fxLayout="row" fxLayoutAlign="left center">
+                                                <span>{{processors.name}}</span>
+                                            </div>
+                                        </div>
+                                        <div fxFlex="50" fxLayout="row" fxLayoutAlign="start center">
+                                            <mat-form-field dense>
+                                                <mat-select [(ngModel)]="processors.deploymentTargetNodeId"
+                                                            [disabled]="disableNodeSelection.value"
+                                                            required>
+                                                    <mat-option [value]="nodeInfo.nodeControllerId"
+                                                                *ngFor="let nodeInfo of deploymentOptions[processors.appId]">
+                                                        <em>{{nodeInfo.nodeMetadata.nodeAddress}}</em>
+                                                    </mat-option>
+                                                </mat-select>
+                                            </mat-form-field>
+                                        </div>
+                                    </div>
+                                    <div *ngFor="let sinks of tmpPipeline.actions">
+                                        <div fxFlex="100" fxLayout="row">
+                                            <div fxFlex="50" fxLayout="row" fxLayoutAlign="left center">
+                                                <span>{{sinks.name}}</span>
+                                            </div>
+                                        </div>
+                                        <div fxFlex="50" fxLayout="row" fxLayoutAlign="start center">
+                                            <mat-form-field dense>
+                                                <mat-select [(ngModel)]="sinks.deploymentTargetNodeId"
+                                                            [disabled]="disableNodeSelection.value"
+                                                            required>
+                                                    <mat-option [value]="nodeInfo.nodeControllerId"
+                                                                *ngFor="let nodeInfo of deploymentOptions[sinks.appId]">
+                                                        <em>{{nodeInfo.nodeMetadata.nodeAddress}}</em>
+                                                    </mat-option>
+                                                </mat-select>
+                                            </mat-form-field>
+                                        </div>
+                                    </div>
+
+                                </mat-expansion-panel>
+                            </mat-accordion>
                         </div>
+
                     </div>
+
                 </div>
+<!--                <mat-divider *ngIf="advancedSettings" style="margin: 1em 0 1em 0;"></mat-divider>-->
+<!--                <div *ngIf="advancedSettings">-->
+<!--                    <b>Node Selection</b>-->
+<!--                    <div *ngFor="let processors of pipeline.sepas">-->
+<!--                        <div fxFlex="100" fxLayout="row">-->
+<!--                            <div fxFlex="50" fxLayout="row" fxLayoutAlign="left center">-->
+<!--                                <span>{{processors.name}}</span>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                        <div fxFlex="50" fxLayout="row" fxLayoutAlign="start center">-->
+<!--                            <mat-form-field appearance="outline">-->
+<!--                            <mat-select [(ngModel)]="processors.deploymentTargetNodeId"-->
+<!--                                        [disabled]="disableNodeSelection.value"-->
+<!--                                        style="margin: 0;height: 20px;"-->
+<!--                                        placeholder="select execution node"-->
+<!--                                        required>-->
+<!--                                <mat-option [value]="nodeInfo.nodeControllerId"-->
+<!--                                            *ngFor="let nodeInfo of deploymentOptions[processors.appId]">-->
+<!--                                    <em>{{nodeInfo.nodeMetadata.nodeAddress}}</em>-->
+<!--                                </mat-option>-->
+<!--                            </mat-select>-->
+<!--                            </mat-form-field>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                    <div *ngFor="let sinks of pipeline.actions">-->
+<!--                        <div fxFlex="100" fxLayout="row">-->
+<!--                            <div fxFlex="50" fxLayout="row" fxLayoutAlign="left center">-->
+<!--                                <span>{{sinks.name}}</span>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                        <div fxFlex="50" fxLayout="row" fxLayoutAlign="start center">-->
+<!--                            <mat-form-field appearance="outline">-->
+<!--                                <mat-select [(ngModel)]="sinks.deploymentTargetNodeId"-->
+<!--                                            [disabled]="disableNodeSelection.value"-->
+<!--                                            style="margin: 0; height: 20px;"-->
+<!--                                            placeholder="select execution node"-->
+<!--                                            required>-->
+<!--                                    <mat-option [value]="nodeInfo.nodeControllerId" *ngFor="let nodeInfo of-->
+<!--                                    deploymentOptions[sinks.appId]">-->
+<!--                                        <em>{{nodeInfo.nodeMetadata.nodeAddress}}</em>-->
+<!--                                    </mat-option>-->
+<!--                                </mat-select>-->
+<!--                            </mat-form-field>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
             </div>
             <div fxFlex="100" fxLayout="column" fxLayoutAlign="center center" *ngIf="saving">
                 <mat-spinner [mode]="'indeterminate'" [diameter]="50"></mat-spinner>
@@ -124,7 +217,7 @@
         </div>
     </div>
     <mat-divider></mat-divider>
-    <div class="sp-dialog-actions">
+    <div class="sp-dialog-actions" fxLayoutAlign="center center">
         <button [disabled]="!submitPipelineForm.valid || saving || saved" mat-button mat-raised-button color="primary" (click)="savePipeline(false)" style="margin-right:10px;">
             Save
         </button>
