--- a/ui/src/app/pipelines/components/pipeline-overview/pipeline-overview.component.html
+++ b/ui/src/app/pipelines/components/pipeline-overview/pipeline-overview.component.html
@@ -49,6 +49,13 @@
             </td>
         </ng-container>
 
+        <ng-container matColumnDef="startedAt">
+            <th mat-header-cell *matHeaderCellDef> Started</th>
+            <td mat-cell *matCellDef="let pipeline">
+                <h5>{{pipeline.startedAt | date:'dd.MM.yyyy HH:mm'}}</h5>
+            </td>
+        </ng-container>
+
         <ng-container matColumnDef="action">
             <th mat-header-cell *matHeaderCellDef> Action</th>
             <td mat-cell *matCellDef="let pipeline">
@@ -67,6 +74,14 @@
                     </button>
                 </span>
                     <span fxFlex fxFlexOrder="3" fxLayout="row" fxLayoutAlign="center center">
+                    <button color="primary" mat-button mat-icon-button matTooltip="Live-Migrate processors"
+                            matTooltipPosition="above"
+                            [disabled]="!pipeline.running"
+                            (click)="pipelineOperationsService.migrateProcessors(pipeline)">
+                        <i class="material-icons">storage</i>
+                    </button>
+                </span>
+                    <span fxFlex fxFlexOrder="4" fxLayout="row" fxLayoutAlign="center center">
                     <button color="primary" mat-button mat-icon-button matTooltip="Delete pipeline" matTooltipPosition="above"
                             (click)="pipelineOperationsService.showDeleteDialog(pipeline, refreshPipelinesEmitter)">
                         <i class="material-icons">delete</i>
