[WIP] add ui part for processor live-migration, add backend migration endpoint

--- a/ui/src/app/pipelines/components/pipeline-overview/pipeline-overview.component.html
+++ b/ui/src/app/pipelines/components/pipeline-overview/pipeline-overview.component.html
@@ -77,7 +77,7 @@
                     <button color="primary" mat-button mat-icon-button matTooltip="Live-Migrate processors"
                             matTooltipPosition="above"
                             [disabled]="!pipeline.running"
-                            (click)="pipelineOperationsService.migrateProcessors(pipeline)">
+                            (click)="pipelineOperationsService.migratePipelineProcessors(pipeline)">
                         <i class="material-icons">storage</i>
                     </button>
                 </span>
