[STREAMPIPES-271] Fix unit transformation dialog, add rest interface to receive measurement units

--- a/ui/src/app/connect/dialog/edit-event-property/components/edit-unit-transformation/edit-unit-transformation.component.html
+++ b/ui/src/app/connect/dialog/edit-event-property/components/edit-unit-transformation/edit-unit-transformation.component.html
@@ -21,7 +21,7 @@
         <mat-form-field *ngIf="!hadMeasurementUnit" class="example-full-width" style="width: 155px">
             <input matInput placeholder="Unit" [matAutocomplete]="auto" [formControl]="stateCtrl"
                    [attr.disabled]="transformUnitEnable ? '' : null">
-            <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
+            <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn" [panelWidth]="'300px'">
                 <mat-option *ngFor="let unit of filteredUnits | async" [value]="unit.label">
                     {{unit.label}}
                 </mat-option>
