[STREAMPIPES-273] Remove DataSource concept

--- a/ui/src/app/add/add.component.html
+++ b/ui/src/app/add/add.component.html
@@ -27,7 +27,8 @@
                     <mat-tab-group [selectedIndex]="selectedCategoryIndex"
                                    (selectedIndexChange)="setSelectedTab($event)">
                         <mat-tab label="All"></mat-tab>
-                        <mat-tab label="Data Sources"></mat-tab>
+                        <mat-tab label="Data Sets"></mat-tab>
+                        <mat-tab label="Data Streams"></mat-tab>
                         <mat-tab label="Data Processors"></mat-tab>
                         <mat-tab label="Data Sinks"></mat-tab>
                     </mat-tab-group>
