[WIP] store node description in couchdb, add CRUD operation on description, extent frontend node configuration view

--- a/ui/src/app/configuration/configuration.component.html
+++ b/ui/src/app/configuration/configuration.component.html
@@ -38,6 +38,6 @@
         <sp-datalake-configuration fxFlex="100"></sp-datalake-configuration>
     </div>
     <div class="page-container-padding-inner" fxLayout="column" fxFlex="100" *ngIf="selectedIndex == 3">
-        <edge-configuration fxFlex="100"></edge-configuration>
+        <node-configuration fxFlex="100"></node-configuration>
     </div>
 </div>
