--- a/ui/src/app/app-container/app-container.component.html
+++ b/ui/src/app/app-container/app-container.component.html
@@ -31,7 +31,7 @@
     <div class="fixed-height page-container-padding-inner" fxLayout="column" fxFlex="100" *ngIf="!isAppActive">
         <div fxFlex="100" fxLayout="column">
             <h1>My apps</h1>
-            <mat-card class="example-card" *ngFor="let installedApp of installedApps">
+            <mat-card class="node-card" *ngFor="let installedApp of installedApps">
                 <div fxFlex="100" fxLayout="row">
                     <div fxFlex="75" fxLayout="column" fxLayoutAlign="center start">
                         <mat-card-header>
