--- a/ui/src/app/configuration/node-configuration/node-configuration.component.scss
+++ b/ui/src/app/configuration/node-configuration/node-configuration.component.scss
@@ -16,6 +16,9 @@
  *
  */
 
+@import 'src/scss/sp/colors';
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
+
 .page-container-padding-inner {
     padding: 10px;
 }
@@ -24,13 +27,28 @@
     width:80%;
 }
 
-.example-card {
-    max-width: 400px;
+.node-card {
+    max-width: 450px;
 }
 
 mat-card {
     box-shadow: 0 2px 1px -1px rgba(0, 0, 0, .2), 0 1px 1px 0 rgba(0, 0, 0, .14), 0 1px 3px 0 rgba(0, 0, 0, .12);
     margin: 10px;
+}
+
+.mat-card-header-text {
+    margin: 0 !important;
+}
+
+.node-mat-icon-button {
+    width: 25px !important;
+    height: 25px !important;
+    line-height: 25px !important;
+    padding: 2px;
+    min-width: 0;
+    flex-shrink: 0;
+    border-radius: 50%;
+    margin: 0 2px 0 2px;
 }
 
 li {
@@ -65,9 +83,39 @@ li {
 }
 
 .node-header-avatar {
-    /*background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');*/
-    color: darkgray;
+    color: $sp-color-accent-light;
     padding-top: 6px;
+}
+
+.div-icon-node-actions {
+    margin-left: auto;
+    margin-right: 0;
+}
+
+.node-state {
+    //float:right;
+    transform: scale(1.3);
+}
+
+.node-activated {
+    @extend .node-state;
+    color: $sp-color-primary;
+}
+
+.node-inactive {
+    @extend .node-state;
+    color: $sp-color-accent-light;
+}
+
+.node-deactivated {
+    @extend .node-state;
+    //color: $sp-color-accent;
+    color: #F44336;
+}
+
+.node-evict {
+    @extend .node-state;
+    color: $sp-color-accent;
 }
 
 /*.ft-foot-4 {*/
@@ -111,4 +159,8 @@ hr {
     border-top: 1px solid #ccc;
     margin: 0.6em 3em;
     padding: 0;
+}
+
+.fa-custom {
+    font-size: 2em;
 }
