[WIP] initial work on resource requirement defition in SDK and core

--- a/ui/src/app/pipelines/components/pipeline-overview/pipeline-overview.component.html
+++ b/ui/src/app/pipelines/components/pipeline-overview/pipeline-overview.component.html
@@ -78,7 +78,7 @@
                             matTooltipPosition="above"
                             [disabled]="!pipeline.running"
                             (click)="pipelineOperationsService.migratePipelineProcessors(pipeline)">
-                        <i class="material-icons">storage</i>
+                        <i class="material-icons">swap_horizontal_circle_filled</i>
                     </button>
                 </span>
                     <span fxFlex fxFlexOrder="4" fxLayout="row" fxLayoutAlign="center center">
