--- a/ui/src/app/pipelines/components/pipeline-overview/pipeline-overview.component.html
+++ b/ui/src/app/pipelines/components/pipeline-overview/pipeline-overview.component.html
@@ -49,10 +49,10 @@
             </td>
         </ng-container>
 
-        <ng-container matColumnDef="startedAt">
+        <ng-container matColumnDef="lastStartedAt">
             <th mat-header-cell *matHeaderCellDef> Started</th>
             <td mat-cell *matCellDef="let pipeline">
-                <h5>{{pipeline.startedAt | date:'dd.MM.yyyy HH:mm'}}</h5>
+                <h5>{{pipeline.startedAt ? (pipeline.startedAt | date:'dd.MM.yyyy HH:mm') : "n/a"}}</h5>
             </td>
         </ng-container>
 
